# STAG-Data-Consumer-Adapter-Interface

./: .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  .valgrind_targets.json  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  ci-variables.yml  conanfile.py  conanfile.txt  valgrind.supp
conan/: conanfile.py
conan/test_package/: example.cpp
docs/code_documentation/: main.md
docs/manual/: 2_implementation_guidlines.md  3_adapter_lifetime.md  4_device_usage.md  main.md
includes/: DataConsumerAdapter.hpp  DataConsumerAdapterInterface.hpp  Stoppable.hpp
includes/mocks/: DataConsumerAdapterInterface_MOCK.hpp
sources/: CMakeLists.txt
sources/DCAI/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
sources/runner/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
tests/unit_tests/: CMakeLists.txt
unit_tests/: CMakeLists.txt  testRunner.cpp
unit_tests/Data_Consumer_Adapter_Interface_Tests/: data_consumer_adapter_interface_tests.cc
unit_tests/Data_Consumer_Adapter_Tests/: DataConsumerAdapterTests.cc
utility/: .amalgam_index.html  .make_public.sh  .package_template.sh  Doxyfile  run-lcov.py
